--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Playlist</title>
+    <link href="index.css" rel="stylesheet">
   </head>
   <body>
-      <select name="my_select" style="height: 40px; line-height: 100px;">
-        <option name="reggae"> Select your genre </option>
-        <option name="reggae"> Reggae </option>
-        <option name="blues"> Blues </option>
-      </select>
-
+    <header></header>
+    <section class="left">
+      <div class="tbin">track bin</div>
+        <button>choose tracks</button>
+    </section>
+    <section class="right">
+      <img id ="trainTrack" src="resources/track.jpg">
+    </section>
+    <footer><div class="footcopy">&copy; 2015 Teisia Park</div></footer>
   </body>
 </html>
