--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <header></header>
     <section class="left">
       <div class="tbin">track bin</div>
-        <button>choose tracks</button>
+        <button><a href="https://practice-assessment-playlist-teisia.firebaseapp.com/playlist.html">choose tracks</a></button>
     </section>
     <section class="right">
       <img id ="trainTrack" src="resources/track.jpg">
