Module 2.1: As a developer, when I submit a get request on the home page [https://lit-fortress-6467.herokuapp.com/object ] , I receive data and I am able to choose 3 random album image URLs from the data received.

--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,19 @@
   </head>
   <body>
     <header></header>
+    <section class="main">
     <section class="left">
       <div class="tbin">track bin</div>
         <button><a href="https://practice-assessment-playlist-teisia.firebaseapp.com/playlist.html">choose tracks</a></button>
     </section>
     <section class="right">
+      <div class="albumArt">
+      </div>
       <img id ="trainTrack" src="resources/track.jpg">
     </section>
+    </section>
     <footer><div class="footcopy">&copy; 2015 Teisia Park</div></footer>
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="index.js"></script>
   </body>
 </html>
