Module 3.2: As a user, when I visit the playlist page, I see a div populated with all of the albums in the album list retrieved from the API.

--- a/public/playlist.html
+++ b/public/playlist.html
@@ -6,7 +6,7 @@
     <link href="playlist.css" rel="stylesheet">
   </head>
   <body>
-    <header><div class="headcopy">click and album to add its tracks to the bin</div></header>
+    <header><div class="headcopy">click an album to add its tracks to the bin</div></header>
     <section class="albums">
     </section>
     <section class="main">
@@ -15,5 +15,7 @@
     <button>submit bin</button>
     </section>
     <footer><div class="footcopy">&copy; 2015 Teisia Park</div></footer>
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="playlist.js"></script>
   </body>
 </html>
