--- a/public/playlist.html
+++ b/public/playlist.html
@@ -7,8 +7,7 @@
   </head>
   <body>
     <header><div class="headcopy">click an album to add its tracks to the bin</div></header>
-    <section class="albums">
-    </section>
+    <div class="albums"></div>
     <section class="main">
     <textarea></textarea><br>
     <button id="clearTracks">clear tracks</button>
