Module 5.1: As a developer, when my playlist is completed, I have accumulated all of the album (or track ) names in a collection

--- a/public/playlist.html
+++ b/public/playlist.html
@@ -9,7 +9,7 @@
     <header><div class="headcopy">click an album to add its tracks to the bin</div></header>
     <div class="albums"></div>
     <section class="main">
-    <textarea></textarea><br>
+    <textarea class ="trackList"></textarea><br>
     <button id="clearTracks">clear tracks</button>
     <button>submit bin</button>
     </section>
