Module 5.2: As a developer, when I send my collection via POST request to the POST API: https://lit-fortress-6467.herokuapp.com/post , I receive and log a response to the console.

--- a/public/playlist.html
+++ b/public/playlist.html
@@ -11,7 +11,7 @@
     <section class="main">
     <textarea class ="trackList"></textarea><br>
     <button id="clearTracks">clear tracks</button>
-    <button>submit bin</button>
+    <button id="submit">submit bin</button>
     </section>
     <footer><div class="footcopy">&copy; 2015 Teisia Park</div></footer>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
